--- a/coursera/w4e/assigments/3/index.html
+++ b/coursera/w4e/assigments/3/index.html
@@ -24,10 +24,8 @@
       Great minds discuss ideas; average minds discuss events; small minds
       discuss people. - Eleanor Roosevelt
     </div>
-    <p id="link">
-      <a href="https://www.brainyquote.com/" target="_blank">
+    <div id="link"><a href="https://www.brainyquote.com/" target="_blank">
         Brainy Quote
-      </a>
-    </p>
+      </a></div>
   </body>
 </html>
